# ReX

./: Cargo.toml
examples/: qc.rs
src/: color.rs  dimensions.rs  environments.rs  error.rs  functions.rs  lexer.rs  lib.rs
src/font/: kerning.rs  mod.rs  opentype.rs  style.rs
src/layout/: builders.rs  convert.rs  engine.rs  mod.rs
src/parser/: color.rs  engine.rs  nodes.rs
src/render/: mod.rs  scene.rs
tests/: layout.rs
