[package]
name = "rex"
version = "0.1.2"
authors = [
    "Christopher Breeden <github@u.breeden.cc>",
    "Sebastian Köln <s3bk@protonmail.com>"
]
edition = "2018"

[dependencies]
font = { git = "https://github.com/pdf-rs/font" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_content = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder/" }
unicode-math = { git = "https://github.com/s3bk/unicode-math/" }
vector = { git = "https://github.com/s3bk/vector", features=["impl_pathfinder"] }

static_map = "0.2.0-beta"
static_map_macros = "0.2.0-beta"
serde_derive = "1.0"
serde = "1.0"

[dev-dependencies]
serde_yaml = "0.7"
bincode = "1.2.1"
env_logger = "*"

[dependencies.log]
version="0.4.8"
